# slurmly

./: .gitignore  README.md  pyproject.toml
docs/: anvil.md  api-reference.md  configuration.md  cookbook.md
slurmly/: __init__.py  artifacts.py  capabilities.py  cleanup.py  client.py  config.py  exceptions.py  hooks.py  models.py  paths.py  polling.py  presets.py  profiles.py  states.py  validators.py
slurmly/scripts/: __init__.py  renderer.py
slurmly/slurm/: __init__.py  commands.py  parser.py
slurmly/ssh/: __init__.py  transport.py
slurmly/testing/: __init__.py  fake_transport.py
tests/: conftest.py  smoke_edge_cases_live.py  test_arrays.py  test_artifacts.py  test_batch_get_jobs.py  test_capabilities.py  test_cleanup.py  test_client_get_job.py  test_client_submit.py  test_concurrency.py  test_config.py  test_config_phase3.py  test_dependencies.py  test_hooks.py  test_integration_flow.py  test_models.py  test_parser.py  test_paths.py  test_polling.py  test_presets.py  test_renderer.py  test_states.py  test_status_commands.py  test_status_parsers.py  test_transport_phase3.py
tests/fixtures/slurm/purdue_anvil/: cluster_facts.txt  meta.txt  modules_extra.txt  sacct_cancelled.json  sacct_completed.json  sacct_failed.json  sacct_oom.json  sacct_parsable2_completed.txt  sacct_timeout.json  sacct_with_steps_parsable2.txt  sbatch_invalid_partition.txt  sbatch_success.txt  sbatch_success_with_cluster.txt  sftp_check.txt  sinfo_partitions.txt  sinfo_version.txt  squeue_empty.json  squeue_pending.json  squeue_running.json
